--- a/public/css/app.css
+++ b/public/css/app.css
@@ -55,7 +55,7 @@ header {
 }
 
 .product img {
-    max-width: 100%;
+    max-width: 50%;
 }
 
 .product h2 {
@@ -83,4 +83,9 @@ header {
 
 .color-header{
     background-color: #E0DF6D !important;
+}
+
+
+.color-header h1 {
+    font-size: 1.5rem;
 }
