carrito de compras update

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -93,3 +93,10 @@ header {
 .background-color{
     background-color: #71A06C;
 }
+
+.footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
+
